# my_torch

./: .gitignore  Makefile  README.md  my_torch_network_cnn_best.nn  my_torch_network_cnn_best_v3.nn  pyproject.toml  train_configs.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  mirror.yml
docs/: architecture_nn_module.md  benchmarks.md  contributing.md  nn_format.md
my_torch/: __init__.py  activations.py  config_loader.py  hyperparameter_search.py  initializers.py  layers.py  losses.py  neural_network.py  nn_io.py  optimizers.py  training.py
my_torch_analyzer/: __init__.py  __main__.py  cli.py  dataset.py  fen.py
my_torch_analyzer_pkg/: __main__.py  cli.py  dataset.py  fen.py  labels.py
scripts/: auto_train_loop.py  compute_accuracy.py  generate_dataset.py  my_torch_generator  train_best.py  train_configs.py
tests/: optimizers.py  test_activations.py  test_analyzer.py  test_cli_errors.py  test_config_loader.py  test_dataset_prediction.py  test_fen_encoding.py  test_fen_parser.py  test_generator.py  test_hyperparameter_search.py  test_initializers.py  test_integration.py  test_labels.py  test_layers.py  test_losses.py  test_neural_network.py  test_nn_io.py  test_optimizers.py  test_regularization.py  test_training.py  test_training_split.py
